webserver/httpbin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: httpbin.minikube.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin-svc
            port:
              number: 80
